--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.1.0",
     "body-parser": "^1.13.1",
     "cookie-parser": "^1.3.5",
     "express": "^4.12.4",
@@ -18,6 +19,8 @@
     "nconf": "^0.7.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
-    "shortid": "^2.2.2"
+    "shortid": "^2.2.2",
+    "supertest": "^1.0.1",
+    "supertest-session": "^1.0.0"
   }
 }
